--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     test
-    <div id="connectome"></div>
+    <div id="nodeHolder"></div>
     <div id="console" class="console">Console:</div>
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.js"></script>
@@ -18,5 +18,7 @@
 <script type="text/javascript" src="utilities.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="connectome.setup.js"></script>
+<script type="text/javascript" src="connectome.update.js"></script>
 <script type="text/javascript" src="connectome.js"></script>
+<script type="text/javascript" src="main.js"></script>
