separated display by  colors and corners, for input, output and interneurons

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <div id="nodeHolder"></div>
+    <div id="nodeHolder">
+        <div id="inputHolder" class="nodeHolder"></div>
+        <div id="outputHolder" class="nodeHolder"></div>
+        <div id="interHolder" class="nodeHolder"></div>
+
+    </div>
+    <div id=inputNodes>
+        <div id="leftInput"></div>
+        <div id="rightInput"></div>
+    </div>
+
     <div id="console" class="console">Console:</div>
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.js"></script>
@@ -21,3 +31,4 @@
 <script type="text/javascript" src="connectome.update.js"></script>
 <script type="text/javascript" src="connectome.js"></script>
 <script type="text/javascript" src="main.js"></script>
+ 
